# Simple_C_Language

./: .gitignore  .vscode-ctags  README.MD  README.md  gcc+makefile.html  gcc+makefile.md  git_learn_note.md
ACCESS_GITHUB/: readme.md
c_example/1.0_user_printf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main_copy.c  print
c_example/2.0/: 2main.c  readme.md
example_c/1.0/: CMakeLists.txt  build_cmake.sh  cmake_compile.sh  main.c  make_run.sh  math0.c  math0.h  pjt_clean.sh  upload_git.sh
example_c/1.0/libmath/: CMakeLists.txt
example_c/1.0/src/: CMakeLists.txt  main.c
example_c/2.0/: main.c
git_learn_note/: git_learn_note.md  readme.md
